--- a/package.json
+++ b/package.json
@@ -23,16 +23,24 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@prisma/client": "6.3.1",
+    "kysely": "^0.27.5",
+    "nestjs-kysely": "^1.1.0",
+    "pg": "^8.13.3",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
+    "@nestjs/mapped-types": "^2.1.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
+    "@swc/cli": "^0.6.0",
+    "@swc/core": "^1.10.16",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
+    "@types/pg": "^8.11.11",
     "@types/supertest": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
     "@typescript-eslint/parser": "^8.0.0",
@@ -42,6 +50,8 @@
     "jest": "^29.5.0",
     "nest": "^0.1.6",
     "prettier": "^3.0.0",
+    "prisma": "6.3.1",
+    "prisma-kysely": "^1.8.0",
     "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
     "ts-jest": "^29.1.0",
